--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/.idea/markdown-navigator/profiles_settings.xml
+/.idea/game-of-life.iml
+/.idea/vcs.xml
